fix user avatar/ status icon spacing

--- a/app/styles/app/modules/avatar.sass
+++ b/app/styles/app/modules/avatar.sass
@@ -42,19 +42,11 @@
     margin-left: 1em
     top: -3px
 
-.commit-author
-  .avatar
-    width: 18px
-    height: 18px
-    margin-right: .3rem
+.avatar--small
+  @extend .avatar
+  width: 18px
+  height: 18px
+  margin-right: .3rem
   .pseudo-avatar:after
-    font-size: .7em
-    line-height: 1.7
-
-.row-committer
-  .avatar
-    width: 18px
-    height: 18px
-  .pseudo-avatar:after
-    font-size: .7em
-    line-height: 1.6
+    font-size: 9px
+    line-height: 16px
