--- a/app/styles/app/modules/icons.sass
+++ b/app/styles/app/modules/icons.sass
@@ -10,27 +10,6 @@
   height: 15px
   @extend %icon
 
-.status-icon *,
-.request-icon *
-  fill: none
-  stroke: $cement-grey
-  stroke-linecap: round
-  stroke-linejoin: round
-  stroke-miterlimit: 10
-  stroke-width: 2px
-
-.status-icon
-  @extend %icon
-  width: 13px
-  height: 20px
-  margin-right: .3rem
-
-.request-icon
-  @extend %icon
-  width: 16px
-  height: 19px
-  margin-right: .1rem
-
 %icon-download-log
   background-image: inline-image('stroke-icons/icon-downloadlogs.svg')
 .icon-download-log
